[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.25",
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-amazon-sp-api>=1.9.48",
    "requests>=2.32.5",
    "sendgrid>=6.12.4",
    "sqlalchemy>=2.0.43",
    "twilio>=9.8.0",
    "werkzeug>=3.1.3",
    "pycryptodome>=3.23.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "pytesseract>=0.3.13",
    "pillow>=12.0.0",
    "opencv-python-headless>=4.11.0.86",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "prophet>=1.2.1",
    "opencv-python>=4.11.0.86",
    "openai>=2.7.1",
    "pytest>=9.0.1",
    "pytest-flask>=1.3.0",
    "requests-aws4auth>=1.3.1",
    "pypdf2==3.0.1",
]
